--- a/application/view/header.html
+++ b/application/view/header.html
@@ -26,7 +26,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Confectionary Listings</a>
+          <a class="brand" href="#">Confectionary World</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="<?php echo $activeHome ?>"><a href="admin.php">Home</a></li>
