Replaced deleteProduct function with DRY deleteRow function

--- a/application/view/public/header.html
+++ b/application/view/public/header.html
@@ -36,7 +36,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Confectionary World</a>
+          <a class="brand" href="admin.php">Confectionary World</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="<?php echo $activeHome ?>"><a href="admin.php">Home</a></li>
