--- a/application/view/header.html
+++ b/application/view/header.html
@@ -26,7 +26,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Confectionary World</a>
+          <a class="brand" href="admin.php">Confectionary World</a> <!-- Changed href so always goes home PB 27.12 2013 -->
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="<?php echo $activeHome ?>"><a href="admin.php">Home</a></li>
